# simde0.7.6

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  deploy.yml
benchmark-1.8.2/: CMakeLists.txt
cmake/: ExtraWarningFlags.cmake  find_avx.cmake  find_sse.cmake
pio_base/: CMakeLists.txt  timer-inl.h  timer.cc  timer.h
simde/: CMakeLists.txt
test_hdr/: CMakeLists.txt  b1.cpp  test1.cpp
