CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(simde)
ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
                      CXX_STANDARD 11)
TARGET_INCLUDE_DIRECTORIES(
        ${PROJECT_NAME}
        INTERFACE
        $<BUILD_INTERFACE:${${PROJECT_NAME}_SOURCE_DIR}/>)