CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(simde C)
ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
                      C_STANDARD 99)
TARGET_INCLUDE_DIRECTORIES(
        ${PROJECT_NAME}
        INTERFACE
        $<BUILD_INTERFACE:${${PROJECT_NAME}_SOURCE_DIR}/>)